# mckit

./: .clang-format  .coveragerc  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .pypirc  .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  build-example.py  build.py  build_nlopt.py  create-jk.bat  create-jk.sh  create-sdist.sh  env  environment.yaml  extension_builder.py  extension_geometry.py  extension_nlopt.py  extension_utils.py  fixmkl.rc  init.sh  install-build-tools-win.ps1  install-build-tools.sh  install-poetry-for-conda.sh  install_poetry.sh  mypy.ini  noxfile.py  preamble.rst  prepare-conda.bat  pyproject.toml  (+17 more)
.github/: constraints.txt  dependabot.yml  release-drafter.yml
.github/workflows/: clean-workflow-logs.yml  combine-prs.yml  constraints.txt  coverage.yml  labeler.yml  publish.bak-yml  publish.yml  release-drafter.yml  release.yml  stale.yml  test-macos.yml  test-pypi-1.yml  test-pypi.yml  tests.yml
adhoc/: calc_up_intersections.py  compute_trt_theta_bins.py  demo_typer.py  extract_lost_particles.py  fix_lost_particles.py  gen_dnfm_in_envelops.py  homogeineze_epp11_bricks.py  integrate_hfsr_antenna_flat.py  mix_steel_water.py  rename-ng14.py  simplify_up08.py  trt-prepare.py  try_nox.py  try_pip.py
adhoc/cross_fields/: __init__.py  add_envelop.py  insert_dnfm_dummies.py  insert_generators.py
adhoc/ep11/: __init__.py  verify_co05_volumes.py
benchmarks/: conftest.py  mckit_utils.py  test_mcnp_reading.py  test_shape.py
build_configs/: RDAServer1.rc  bigfoot.env  bigfoot.rc  check_path.py  common.rc  fixmkl.rc  python.env  utils.env
building/: build_nlopt.py  create_mkl_symlinks.py  extension_geometry.py  extension_utils.py
cmake/: FindMKL.cmake  FindMKL.cmake.bak-1
ctests/: main.c  py_import_call_execute.c  py_import_call_execute.h
data/: notes.txt
data/model_test_data/: material_creation.py  model1_ans.txt  model_data.py
data/universe_test_data/: model2.txt  model3.txt  model4.txt  volume_ans.py
doc/source/: conf.py  fispact_tools.rst  index.rst  material.rst  mcnp-parser.rst  surface.rst  transformation.rst  tutorial.rst
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  developer.rst  index.rst  license.rst  material.rst  mckit.cli.commands.rst  mckit.cli.rst  mckit.parser.common.rst  mckit.parser.rst  mckit.rst  mckit.utils.rst  mcnp-model.rst  mcnp-parser.rst  modules.rst  reference.rst  surface.rst  transformation.rst  tutorial.rst
experiments/: parser_test.ipynb  parser_test.py  test1.i  test1.ipynb  test2.i
mckit/: __init__.py  _init_dynamic_libraries.py  activation.py  body.py  box.py  card.py  cell.py  constants.py  fispact.py  fispact_parser.py  fmesh.py  logging.py  material.py  mcnp_input_parser.py  meshtal_parser.py  model.py  parser.py  printer.py  setup.py  shape.py  source.py  surface.py  transformation.py  universe.py  universe_analyser.py  utils.py  version.py
mckit/cli/: logging.py  runner.py
mckit/core/: Visitor.py
mckit/parser/: __init__.py  cell_parser.py  common.py  fispact_parser.py  material_parser.py  mcnp_input_parser.py  mcnp_input_sly_parser.py  mcnp_section_parser.py  mctal_parser.py  meshtal_parser.py  surface_parser.py  transformation_parser.py
mckit/src/: box.c  box.h  box_doc.h  common.h  coverage.c  coverage.h  geometry.c  geometry.h  geometrymodule.c  rbtree.c  rbtree.h  shape.c  shape.h  surf_doc.h  surface.c  surface.h
mckit/utils/: Index.py  __init__.py  accept.py  io.py  logging.py  misc.py  named.py  resource.py  tolerance.py  utils.py
mckit/wrap/: box.c  box.pyx  box_.c  box_.h  box_wrap.c  box_wrap.h  cbox.pxd  cgeometry.pxd  common_.c  common_.h  csurface.pxd  geometry.pyx  geometry_.c  geometry_.h  geometrymodule.c  geomext.pyx  setup.py  surface.pyx  surface_.c  surface_.h
notebooks/: best_practices.md  install_jupyter_contrib_nbextensions.sh  install_jupyter_notebook_theme.sh  install_nbdime.sh  template.ipynb
notebooks/dvp/: GA_VIS_IR.i  activation-upp08.ipynb  activation.ipynb  calc-intersection-wo-bb.ipynb  calc_intersection.ipynb  ga-vis-ir.i  trt-prepare.ipynb  u200.i  upp02-map-activation-to-rwcl.ipynb  upp02-map-activation-to-rwcl.py  upp08-map-activation-to-rwcl.ipynb
profiles/: mcnp_reading.py
scripts/: TODO.txt  bump  check-path  clean  clear-prev-dist-info.py  common.rc  deltag
src/mckit/: __init__.py  _init_dynamic_libraries.py  body.py  box.py  card.py  constants.py  fmesh.py  material.py  printer.py  source.py  surface.py  transformation.py  universe.py  version.py
src/mckit/src/: CMakeLists.txt  box.c  box.h  box_doc.h  geometrymodule.c  rbtree.c  rbtree.h  shape.c  shape.h  surf_doc.h  surface.c  surface.h
tests/: __init__.py  activ1.i  activ1.m  activ2.i  activ2_0.m  conftest.py  test_activation.py  test_body.py  test_body_new.py  test_box.py  test_card.py  test_cell.py  test_fispact.py  test_fispact_parser.py  test_fmesh.py  test_geometry.py  test_material.py  test_material_new.py  test_mcnp_lexer.py  test_mcnp_parser.py  test_mctal_parser.py  test_model.py  test_parser.py  test_printer.py  test_source.py  test_surface.py  test_transformation.py  test_universe.py  test_universe_analyser.py  test_utils.py  test_version.py  universe1.i  universe2.i
tests/cell_test_data/: geometry_test_data.py
tests/cli/: conftest.py  test_check.py  test_compose.py  test_concat.py  test_decompose.py  test_runner.py  test_split.py  test_transform.py
tests/fmesh_test_data/: box_test_data.py
tests/material_test_data/: composition_test_data.py  element_test_data.py  material_test_data.py
tools/: bench  build-example.py  bump  check-path  check_markers.py  clean  clean-cr  clear-prev-dist-info.py  create-jk.bat  create-jk.sh  deltag  gdh  install-build-tools.sh  install_flake8_deps.py  pytest_coverage  reset-mckit-pyenv  reset-pyenv  reset-pyenv-env.sh  run_coverage  start-vs.bat  update-submodules  update_from_upstream.sh
tutorial/: combine.i  mckit training meeting.pptx  mckit_tutorial.ipynb  test1.i  test_cut.i  test_flattened.i  to_insert.i
(+157 files in other folders)
